Update lists at 20240823-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -732,6 +732,7 @@ deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
+deny 2001:4ba0:fff8:120::1;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
@@ -948,7 +949,6 @@ deny 209.141.32.198;
 deny 209.141.37.94;
 deny 209.141.46.203;
 deny 209.141.50.178;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.55.26;
@@ -968,6 +968,7 @@ deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.146.2.41;
 deny 217.197.107.138;
+deny 217.79.189.239;
 deny 23.129.64.131;
 deny 23.129.64.132;
 deny 23.129.64.133;
@@ -1052,6 +1053,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1081,6 +1083,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
 deny 2602:f9f3:0:2::5;
@@ -1743,7 +1746,7 @@ deny 37.46.211.24;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 43.157.40.39;
+deny 3.93.251.12;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1876,7 +1879,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.147.229.165;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
