--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -26,6 +26,7 @@ deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
+deny 2001:4ba0:fff8:120::1;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
@@ -135,6 +136,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
 deny 2602:f9f3:0:2::5;
