--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -732,6 +732,7 @@ allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
+allow 2001:4ba0:fff8:120::1;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
@@ -948,7 +949,6 @@ allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -968,6 +968,7 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.197.107.138;
+allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.133;
@@ -1052,6 +1053,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1081,6 +1083,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -1743,7 +1746,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 43.157.40.39;
+allow 3.93.251.12;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1876,7 +1879,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.147.229.165;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
