--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.29.159.106;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -147,6 +148,7 @@ allow 144.172.118.90;
 allow 144.24.197.112;
 allow 146.59.35.246;
 allow 146.59.35.38;
+allow 146.70.121.124;
 allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
@@ -219,7 +221,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
-allow 178.162.209.56;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -816,6 +817,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:ac8:8b:22:0:1:9121:1111;
 allow 2001:b011:4002:37fc::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
@@ -1054,7 +1056,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1084,7 +1085,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -1457,7 +1457,6 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1725,8 +1724,8 @@ allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.225.96.55;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1948,8 +1947,8 @@ allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
-allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.138;
 allow 84.252.120.163;
