--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 100.29.159.106;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -147,6 +148,7 @@ deny 144.172.118.90;
 deny 144.24.197.112;
 deny 146.59.35.246;
 deny 146.59.35.38;
+deny 146.70.121.124;
 deny 146.70.164.210;
 deny 146.70.81.186;
 deny 147.45.116.145;
@@ -219,7 +221,6 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.202;
-deny 178.162.209.56;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -816,6 +817,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
+deny 2001:ac8:8b:22:0:1:9121:1111;
 deny 2001:b011:4002:37fc::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
@@ -1054,7 +1056,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1084,7 +1085,6 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
 deny 2602:f9f3:0:2::5;
@@ -1457,7 +1457,6 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -1725,8 +1724,8 @@ deny 2a12:d8c0:109a:9001::7;
 deny 2a13:d200:8:6::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
+deny 31.133.1.14;
 deny 31.42.185.134;
-deny 34.225.96.55;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.120.190.85;
@@ -1948,8 +1947,8 @@ deny 82.85.247.254;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
-deny 83.97.20.77;
 deny 84.16.224.227;
+deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.252.120.138;
 deny 84.252.120.163;
