--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.29.159.106;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -302,7 +301,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1457,6 +1455,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1726,6 +1725,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 34.239.90.138;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1947,6 +1947,7 @@ allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
