--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
+allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -13,6 +14,8 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -301,6 +304,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -648,7 +652,6 @@ allow 193.233.133.109;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.38.17;
-allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1092,6 +1095,8 @@ allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1725,6 +1730,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 3.234.247.9;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1775,6 +1781,7 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.21;
+allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
@@ -1850,7 +1857,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.99.195;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.235;
@@ -1939,6 +1945,7 @@ allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.62;
 allow 82.153.138.119;
+allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
