--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -177,7 +177,6 @@ allow 155.94.192.114;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -317,6 +316,7 @@ allow 185.191.204.254;
 allow 185.193.125.105;
 allow 185.193.158.134;
 allow 185.193.52.180;
+allow 185.195.237.238;
 allow 185.195.71.10;
 allow 185.195.71.11;
 allow 185.195.71.12;
@@ -652,6 +652,7 @@ allow 193.233.133.109;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.38.17;
+allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1057,7 +1058,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.20.100.113;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1087,6 +1088,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -1098,7 +1100,6 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1731,6 +1732,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 3.209.100.75;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
