--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -148,6 +148,7 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.90;
 allow 144.24.197.112;
+allow 146.59.126.232;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.121.124;
@@ -177,6 +178,7 @@ allow 155.94.192.114;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1100,6 +1102,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1732,7 +1735,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 3.209.100.75;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1834,6 +1836,7 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
+allow 50.16.87.178;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.161.164.176;
@@ -1860,7 +1863,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
