--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -149,6 +149,7 @@ deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
