Update lists at 20240824-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -305,7 +305,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -508,7 +507,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.162.10;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -725,6 +723,7 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
+allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
@@ -1060,7 +1059,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1090,7 +1088,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -1672,7 +1669,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
-allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
@@ -1732,9 +1728,11 @@ allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
+allow 31.133.0.16;
 allow 31.133.0.210;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 34.225.144.27;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1836,7 +1834,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
-allow 50.16.87.178;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.161.164.176;
@@ -1960,7 +1957,6 @@ allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.138;
 allow 84.252.120.163;
