--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -14,6 +14,7 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
+allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
@@ -137,7 +138,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
@@ -718,7 +718,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
-allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
