--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -305,6 +305,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -507,6 +508,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.230.162.10;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -1669,6 +1671,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
@@ -1729,10 +1732,12 @@ allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.16;
+allow 31.133.0.17;
 allow 31.133.0.210;
+allow 31.133.0.26;
+allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.225.144.27;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1754,6 +1759,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.193.217.9;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1949,7 +1955,6 @@ allow 82.153.138.119;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -1957,6 +1962,7 @@ allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.138;
 allow 84.252.120.163;
