--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -718,6 +718,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 allow 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+allow 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
