--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -718,6 +718,7 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:3b8:6fb7:623e:18bf:9218;
 set_real_ip_from 2a0c:2500:571:3b8:d562:c316:eb7d:cfe8;
+set_real_ip_from 2a0c:2500:571:3b8:d6b7:195b:ef62:c08b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
