Update lists at 20240826-0600

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -190,6 +190,10 @@ set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 171.25.193.20;
+set_real_ip_from 171.25.193.234;
+set_real_ip_from 171.25.193.235;
+set_real_ip_from 171.25.193.25;
 set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
@@ -293,6 +297,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -729,6 +734,10 @@ set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
@@ -928,7 +937,6 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
-set_real_ip_from 209.135.168.10;
 set_real_ip_from 209.135.170.59;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -1053,7 +1061,6 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2402:1f00:8201:61::2d91:af20;
 set_real_ip_from 2402:1f00:8201:61::da05:d4c6;
 set_real_ip_from 2407:3640:2207:8882::1;
-set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.35;
@@ -1071,7 +1078,6 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:f9f3:0:2::148;
-set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
@@ -1706,7 +1712,6 @@ set_real_ip_from 31.133.0.26;
 set_real_ip_from 31.133.0.36;
 set_real_ip_from 31.133.1.14;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.199.215.108;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1857,6 +1862,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.157.232.80;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
