--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -190,6 +190,10 @@ allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.234;
+allow 171.25.193.235;
+allow 171.25.193.25;
 allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
@@ -293,6 +297,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -729,6 +734,10 @@ allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
@@ -928,7 +937,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 209.135.168.10;
 allow 209.135.170.59;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -1053,7 +1061,6 @@ allow 2402:1f00:8100:400::9;
 allow 2402:1f00:8201:61::2d91:af20;
 allow 2402:1f00:8201:61::da05:d4c6;
 allow 2407:3640:2207:8882::1;
-allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1071,7 +1078,6 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
-allow 2602:f9f3:0:2::5;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
@@ -1706,7 +1712,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.199.215.108;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1857,6 +1862,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.157.232.80;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
