--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -35,6 +35,10 @@ allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
@@ -136,7 +140,6 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
-allow 2602:f9f3:0:2::5;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
