--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -35,6 +35,10 @@ deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
+deny 2001:67c:289c::20;
+deny 2001:67c:289c:2::234;
+deny 2001:67c:289c:2::235;
+deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::77;
 deny 2001:67c:289c:4::78;
 deny 2001:67c:289c:4::79;
@@ -136,7 +140,6 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
-deny 2602:f9f3:0:2::5;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:2b4::1;
