--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -138,6 +138,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
 deny 2602:fc24:12:81a6::1;
@@ -747,7 +748,6 @@ deny 2a10:1fc0:10::debc:26b9;
 deny 2a10:1fc0:1::e016:2586;
 deny 2a10:1fc0:8::a061:729b;
 deny 2a10:1fc0:d::7384:5a63;
-deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -762,6 +762,6 @@ deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:178;
+deny 2a12:a800:2:1:45:138:16:213;
 deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
-deny 2a13:d200:8:6::1;
