Update lists at 20240827-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,9 +119,11 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
+allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -159,6 +161,7 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 15.204.224.241;
+allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -296,7 +299,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1082,6 +1084,7 @@ allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
+allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1440,8 +1443,6 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
-allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:541:152:4::1;
@@ -1656,6 +1657,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1694,7 +1696,6 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
-allow 31.129.22.65;
 allow 31.133.0.16;
 allow 31.133.0.17;
 allow 31.133.0.210;
@@ -1723,6 +1724,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.220.226.138;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1817,6 +1819,7 @@ allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
+allow 51.81.33.188;
 allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
@@ -1824,6 +1827,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1849,7 +1853,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.235.128.178;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1910,7 +1913,6 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
-allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1940,6 +1942,7 @@ allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
