--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -147,6 +147,7 @@ allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
+allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -504,8 +505,6 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
-allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:541:152:4::1;
@@ -720,6 +719,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
