Update lists at 20240827-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.29.136.209;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -57,7 +58,6 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
-allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -153,6 +153,7 @@ allow 146.59.35.38;
 allow 146.70.121.124;
 allow 146.70.164.210;
 allow 146.70.81.186;
+allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
 allow 148.113.152.91;
@@ -299,7 +300,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -535,6 +535,7 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
@@ -1045,6 +1046,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1072,6 +1074,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:fc24:12:81a6::1;
@@ -1176,7 +1179,6 @@ allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
@@ -1442,6 +1444,7 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:541:152:4::1;
@@ -1473,7 +1476,6 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1695,6 +1697,7 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 31.129.22.65;
 allow 31.133.0.16;
 allow 31.133.0.17;
 allow 31.133.0.210;
@@ -1723,7 +1726,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.211.111.78;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1797,6 +1799,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
@@ -1917,7 +1920,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.247.165.51;
-allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
