Update lists at 20240827-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.29.136.209;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -58,6 +57,7 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
+allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -123,7 +123,6 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -527,7 +526,6 @@ allow 185.246.189.130;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
-allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.247.224.143;
 allow 185.252.232.218;
@@ -1008,7 +1006,6 @@ allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.130.136.195;
 allow 23.137.248.100;
-allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.27;
@@ -1078,7 +1075,6 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:fc24:12:81a6::1;
-allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
@@ -1179,6 +1175,7 @@ allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
@@ -1341,8 +1338,6 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
-allow 2a00:11c0:1b:aa2::5;
-allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
@@ -1443,7 +1438,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
-allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
@@ -1705,6 +1699,7 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 34.195.22.132;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1715,8 +1710,6 @@ allow 37.205.8.220;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
-allow 37.252.254.33;
-allow 37.252.255.135;
 allow 37.46.208.109;
 allow 37.46.208.187;
 allow 37.46.209.135;
