Update lists at 20240827-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -147,6 +147,7 @@ allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
+allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -401,6 +402,8 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:11c0:1b:aa2::5;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
