--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -58,6 +58,7 @@ allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
 allow 107.189.2.108;
+allow 107.189.2.206;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -123,6 +124,7 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -250,6 +252,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
+allow 184.75.221.107;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -299,6 +302,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1083,6 +1087,7 @@ allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
+allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1338,6 +1343,8 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:11c0:1b:aa2::5;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
@@ -1699,7 +1706,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.195.22.132;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1710,6 +1716,8 @@ allow 37.205.8.220;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 37.252.254.33;
+allow 37.252.255.135;
 allow 37.46.208.109;
 allow 37.46.208.187;
 allow 37.46.209.135;
@@ -1848,6 +1856,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.236.121.158;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
