Update lists at 20240828-0000

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -202,7 +202,6 @@ set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.164.133;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.214.41;
-set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.232.164.52;
 set_real_ip_from 172.235.29.198;
@@ -516,6 +515,7 @@ set_real_ip_from 185.241.208.81;
 set_real_ip_from 185.243.218.110;
 set_real_ip_from 185.243.218.202;
 set_real_ip_from 185.243.218.35;
+set_real_ip_from 185.243.218.57;
 set_real_ip_from 185.243.218.89;
 set_real_ip_from 185.243.23.81;
 set_real_ip_from 185.244.192.175;
@@ -1408,6 +1408,7 @@ set_real_ip_from 2a03:94e0:ffff:185:181:61:0:142;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:110;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:202;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:35;
+set_real_ip_from 2a03:94e0:ffff:185:243:218:0:57;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:89;
 set_real_ip_from 2a03:94e0:ffff:195:16:73:0:134;
 set_real_ip_from 2a03:e600:100::1;
@@ -1653,7 +1654,6 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
-set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1721,6 +1721,7 @@ set_real_ip_from 37.46.211.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.196.85.194;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1849,7 +1850,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.234.130.189;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1937,8 +1937,6 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.82.71;
 set_real_ip_from 89.185.85.140;
-set_real_ip_from 89.187.143.31;
-set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
