--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -202,7 +202,6 @@ allow 171.25.193.80;
 allow 172.104.164.133;
 allow 172.104.182.84;
 allow 172.104.214.41;
-allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.232.164.52;
 allow 172.235.29.198;
@@ -516,6 +515,7 @@ allow 185.241.208.81;
 allow 185.243.218.110;
 allow 185.243.218.202;
 allow 185.243.218.35;
+allow 185.243.218.57;
 allow 185.243.218.89;
 allow 185.243.23.81;
 allow 185.244.192.175;
@@ -1408,6 +1408,7 @@ allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:243:218:0:110;
 allow 2a03:94e0:ffff:185:243:218:0:202;
 allow 2a03:94e0:ffff:185:243:218:0:35;
+allow 2a03:94e0:ffff:185:243:218:0:57;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:94e0:ffff:195:16:73:0:134;
 allow 2a03:e600:100::1;
@@ -1653,7 +1654,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1721,6 +1721,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.196.85.194;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1849,7 +1850,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.234.130.189;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1937,8 +1937,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
-allow 89.187.143.31;
-allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
