--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -471,6 +471,7 @@ allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:243:218:0:110;
 allow 2a03:94e0:ffff:185:243:218:0:202;
 allow 2a03:94e0:ffff:185:243:218:0:35;
+allow 2a03:94e0:ffff:185:243:218:0:57;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:94e0:ffff:195:16:73:0:134;
 allow 2a03:e600:100::1;
@@ -716,7 +717,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
