--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,7 +124,6 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -212,6 +211,7 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
+allow 174.129.75.179;
 allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
@@ -533,7 +533,6 @@ allow 185.247.224.143;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
-allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.132;
@@ -1369,7 +1368,6 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
-allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -1654,6 +1652,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1721,7 +1720,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.196.85.194;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1825,6 +1823,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1937,6 +1936,7 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
