Update lists at 20240828-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -436,6 +436,7 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
+deny 2a02:ed06::222;
 deny 2a03:3b40:fe:3b1::1;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -542,6 +543,22 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
