--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -297,6 +297,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -324,6 +325,22 @@ deny 185.195.71.8;
 deny 185.195.71.9;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
+deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -522,6 +539,7 @@ deny 185.247.224.143;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
+deny 185.35.202.222;
 deny 185.38.175.133;
 deny 185.39.207.83;
 deny 185.40.4.132;
@@ -1362,6 +1380,7 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
+deny 2a02:ed06::222;
 deny 2a03:3b40:fe:3b1::1;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -1468,6 +1487,22 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1684,7 +1719,6 @@ deny 31.133.0.26;
 deny 31.133.0.36;
 deny 31.133.1.14;
 deny 31.42.185.134;
-deny 34.200.123.119;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.120.190.85;
@@ -1807,7 +1841,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1833,6 +1866,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.243.120.155;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1949,6 +1983,7 @@ deny 91.219.239.166;
 deny 91.227.77.199;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 91.92.252.98;
 deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
