Update lists at 20240828-2100

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -408,14 +408,9 @@ deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:19a0:3:d0:0:252e:d06d:1;
-deny 2a00:19a0:3:d0:0:252e:d0bb:1;
-deny 2a00:19a0:3:d1:0:252e:d187:1;
-deny 2a00:19a0:3:d3:0:252e:d315:1;
-deny 2a00:19a0:3:d3:0:252e:d317:1;
-deny 2a00:19a0:3:d3:0:252e:d318:1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
+deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
@@ -540,6 +535,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
