--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -225,6 +225,7 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.209;
+allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
@@ -297,7 +298,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1352,14 +1352,9 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
-allow 2a00:19a0:3:d0:0:252e:d06d:1;
-allow 2a00:19a0:3:d0:0:252e:d0bb:1;
-allow 2a00:19a0:3:d1:0:252e:d187:1;
-allow 2a00:19a0:3:d3:0:252e:d315:1;
-allow 2a00:19a0:3:d3:0:252e:d317:1;
-allow 2a00:19a0:3:d3:0:252e:d318:1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
@@ -1484,6 +1479,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1731,15 +1727,10 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
-allow 37.46.208.109;
-allow 37.46.208.187;
-allow 37.46.209.135;
-allow 37.46.211.21;
-allow 37.46.211.23;
-allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.195.8.229;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1866,7 +1857,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.243.120.155;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1933,6 +1923,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.247.165.51;
+allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
