--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -225,6 +225,7 @@ deny 178.17.174.164;
 deny 178.175.131.141;
 deny 178.175.142.26;
 deny 178.175.148.209;
+deny 178.175.148.246;
 deny 178.20.55.16;
 deny 178.20.55.182;
 deny 178.218.144.18;
@@ -297,7 +298,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -1352,14 +1352,9 @@ deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:19a0:3:d0:0:252e:d06d:1;
-deny 2a00:19a0:3:d0:0:252e:d0bb:1;
-deny 2a00:19a0:3:d1:0:252e:d187:1;
-deny 2a00:19a0:3:d3:0:252e:d315:1;
-deny 2a00:19a0:3:d3:0:252e:d317:1;
-deny 2a00:19a0:3:d3:0:252e:d318:1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
+deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
@@ -1484,6 +1479,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1731,15 +1727,10 @@ deny 37.228.129.5;
 deny 37.228.129.63;
 deny 37.252.254.33;
 deny 37.252.255.135;
-deny 37.46.208.109;
-deny 37.46.208.187;
-deny 37.46.209.135;
-deny 37.46.211.21;
-deny 37.46.211.23;
-deny 37.46.211.24;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.195.8.229;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1866,7 +1857,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.243.120.155;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1933,6 +1923,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.247.165.51;
+deny 84.252.120.163;
 deny 85.17.9.83;
 deny 85.239.41.130;
 deny 85.93.218.204;
